[gd_scene load_steps=11 format=2]

[ext_resource path="res://interface/input_mapper/InputMenu.gd" type="Script" id=1]
[ext_resource path="res://interface/input_mapper/input_mapper/InputMapper.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/kenney_pixel_ui/Colored/grey_pressed.png" type="Texture" id=3]
[ext_resource path="res://core/utils/KeyLabel.gd" type="Script" id=4]
[ext_resource path="res://interface/input_mapper/input_line/ActionList.gd" type="Script" id=5]
[ext_resource path="res://core/utils/ButtonKey.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/input_mapper/KeySelectMenu.gd" type="Script" id=8]
[ext_resource path="res://interface/input_mapper/input_line/InputLine.tscn" type="PackedScene" id=9]
[ext_resource path="res://interface/themes/General.tres" type="Theme" id=10]

[sub_resource type="GDScript" id=1]
script/source = "extends OptionButton

func initialize(input_mapper):
	for profile_index in input_mapper.profiles:
		var profile_name = input_mapper.profiles[profile_index].capitalize()
		add_item(profile_name, profile_index)
	self.connect(\"item_selected\", input_mapper, \"_on_ProfilesMenu_item_selected\")
"

[node name="InputMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 10 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
self_modulate = Color( 0.286275, 0.286275, 0.286275, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMapper" parent="." instance=ExtResource( 2 )]

[node name="Column" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Column"]
margin_right = 1920.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_y = 5
text = "Keybindings"
align = 1
autowrap = true
uppercase = true
script = ExtResource( 4 )
key = "keybindings"

[node name="ProfilesMenu" type="OptionButton" parent="Column"]
margin_left = 953.0
margin_top = 93.0
margin_right = 967.0
margin_bottom = 161.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
flat = true
script = SubResource( 1 )

[node name="Header" type="HBoxContainer" parent="Column"]
margin_top = 186.0
margin_right = 1920.0
margin_bottom = 254.0
mouse_filter = 2

[node name="Action" type="Label" parent="Column/Header"]
margin_right = 958.0
margin_bottom = 68.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Action"
uppercase = true
script = ExtResource( 4 )
key = "action"

[node name="Control" type="Label" parent="Column/Header"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Key"
align = 1
uppercase = true
script = ExtResource( 4 )
key = "control"

[node name="Change" type="Label" parent="Column/Header"]
visible = false
margin_left = 1196.0
margin_right = 1792.0
margin_bottom = 68.0
size_flags_horizontal = 11
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Change"
align = 2
uppercase = true
script = ExtResource( 4 )
key = "change"

[node name="ScrollContainer" type="ScrollContainer" parent="Column"]
margin_top = 279.0
margin_right = 1920.0
margin_bottom = 987.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="Column/ScrollContainer"]
margin_right = 1920.0
margin_bottom = 708.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
script = ExtResource( 5 )
input_line = ExtResource( 9 )

[node name="PlayButton" parent="Column" instance=ExtResource( 6 )]
margin_top = 1012.0
margin_right = 1920.0
margin_bottom = 1080.0
text = "CONFIRM"

[node name="KeySelectMenu" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.679569 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -80.0
margin_right = 400.0
margin_bottom = 80.0
mouse_filter = 2
script = ExtResource( 8 )

[node name="Label" type="Label" parent="KeySelectMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -590.0
margin_top = -30.0
margin_right = 590.0
margin_bottom = 30.0
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.596078, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Press a Key..."
align = 1
autowrap = true
uppercase = true
[connection signal="pressed" from="Column/PlayButton" to="." method="_on_PlayButton_pressed"]
